; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pgo/extr_profile_runtime.c_pgo_reset_counters.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pgo/extr_profile_runtime.c_pgo_reset_counters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@kdp_pgo_reset_counters = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pgo_reset_counters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pgo_reset_counters() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @OSKextResetPgoCountersLock()
  %4 = load i32, i32* @FALSE, align 4
  %5 = call i32 @ml_set_interrupts_enabled(i32 %4)
  store i32 %5, i32* %2, align 4
  store i32 1, i32* @kdp_pgo_reset_counters, align 4
  %6 = call i32 (...) @kextpgo_trap()
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @ml_set_interrupts_enabled(i32 %7)
  %9 = call i32 (...) @OSKextResetPgoCountersUnlock()
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @OSKextResetPgoCountersLock(...) #1

declare dso_local i32 @ml_set_interrupts_enabled(i32) #1

declare dso_local i32 @kextpgo_trap(...) #1

declare dso_local i32 @OSKextResetPgoCountersUnlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
